compiler/testData/diagnostics/tests/sealed/RedundantAbstract.kt
// RUN_PIPELINE_TILL: BACKEND
// FIR_IDENTICAL
<!REDUNDANT_MODIFIER!>abstract<!> sealed class Base {

}